--- a/LoanMate/Base.lproj/Main.storyboard
+++ b/LoanMate/Base.lproj/Main.storyboard
@@ -158,8 +158,9 @@
                             <constraint firstItem="Fl0-fC-1Zm" firstAttribute="top" secondItem="gdg-Gw-CJw" secondAttribute="bottom" constant="8" id="2Re-19-PMD"/>
                             <constraint firstItem="W5S-jQ-Qra" firstAttribute="leading" secondItem="wTG-pU-gfX" secondAttribute="leadingMargin" constant="-16" id="2cU-B6-4ag"/>
                             <constraint firstItem="dw7-wb-EU1" firstAttribute="top" secondItem="Fl0-fC-1Zm" secondAttribute="bottom" constant="8" id="3wB-Ri-ItN"/>
+                            <constraint firstItem="W5S-jQ-Qra" firstAttribute="leading" secondItem="wTG-pU-gfX" secondAttribute="leadingMargin" constant="-16" id="7OP-CW-9ta"/>
                             <constraint firstItem="Fl0-fC-1Zm" firstAttribute="leading" secondItem="wTG-pU-gfX" secondAttribute="leadingMargin" id="CoZ-3w-urO"/>
-                            <constraint firstItem="W5S-jQ-Qra" firstAttribute="top" secondItem="8eq-zR-jxe" secondAttribute="bottom" id="GBI-5P-Hgx"/>
+                            <constraint firstItem="W5S-jQ-Qra" firstAttribute="top" secondItem="8eq-zR-jxe" secondAttribute="bottom" constant="20" id="GBI-5P-Hgx"/>
                             <constraint firstItem="khL-EE-mxl" firstAttribute="top" secondItem="dw7-wb-EU1" secondAttribute="bottom" constant="8" id="GeE-iv-oDF"/>
                             <constraint firstAttribute="trailingMargin" secondItem="khL-EE-mxl" secondAttribute="trailing" constant="-16" id="Ht5-RD-1FT"/>
                             <constraint firstItem="gdg-Gw-CJw" firstAttribute="top" secondItem="W5S-jQ-Qra" secondAttribute="bottom" id="KeX-2P-nWc"/>
@@ -171,13 +172,20 @@
                             <constraint firstItem="W5S-jQ-Qra" firstAttribute="top" secondItem="8eq-zR-jxe" secondAttribute="bottom" id="bLv-pe-Ey8"/>
                             <constraint firstAttribute="trailingMargin" secondItem="dw7-wb-EU1" secondAttribute="trailing" constant="0.5" id="oS7-dw-fHl"/>
                             <constraint firstItem="xpw-WR-nXx" firstAttribute="top" secondItem="Fl0-fC-1Zm" secondAttribute="bottom" constant="8" id="oqJ-oS-9FF"/>
+                            <constraint firstItem="W5S-jQ-Qra" firstAttribute="top" secondItem="8eq-zR-jxe" secondAttribute="bottom" id="pSJ-Wp-Ugi"/>
                             <constraint firstItem="Fl0-fC-1Zm" firstAttribute="trailing" secondItem="wTG-pU-gfX" secondAttribute="trailingMargin" id="qdC-zc-iYa"/>
                             <constraint firstItem="khL-EE-mxl" firstAttribute="top" secondItem="xpw-WR-nXx" secondAttribute="bottom" constant="8" id="tCm-lx-drs"/>
                             <constraint firstItem="xpw-WR-nXx" firstAttribute="leading" secondItem="wTG-pU-gfX" secondAttribute="leadingMargin" id="u7D-Da-kM3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="W5S-jQ-Qra" secondAttribute="trailing" constant="-16" id="xLB-Zd-9EJ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="W5S-jQ-Qra" secondAttribute="trailing" constant="-16" id="yOH-Kd-sM3"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="2cU-B6-4ag"/>
+                                <exclude reference="bLv-pe-Ey8"/>
+                                <exclude reference="pSJ-Wp-Ugi"/>
+                                <exclude reference="yOH-Kd-sM3"/>
+                                <exclude reference="Wf3-OT-Lw2"/>
                                 <exclude reference="RYc-p9-Vk8"/>
                             </mask>
                         </variation>
@@ -194,7 +202,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QFd-NK-N3l" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2770" y="-308"/>
+            <point key="canvasLocation" x="2734" y="-308"/>
         </scene>
         <!--Create Controller-->
         <scene sceneID="Pbw-PM-NA7">
@@ -208,15 +216,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UserID" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FCz-Gn-cAv">
-                                <rect key="frame" x="16" y="64" width="568" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="oX1-Gf-jbO"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KCW-kA-ex1">
                                 <rect key="frame" x="16" y="93" width="568" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -232,7 +231,7 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PaR-XY-bNZ">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PaR-XY-bNZ">
                                 <rect key="frame" x="277" y="562" width="46" height="30"/>
                                 <state key="normal" title="Create">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -251,13 +250,22 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gdy-8e-yns">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gdy-8e-yns">
                                 <rect key="frame" x="16" y="160" width="568" height="394"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Amount" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FCz-Gn-cAv">
+                                <rect key="frame" x="16" y="64" width="568" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="oX1-Gf-jbO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
